# multipage-login-streamlit

./: 404.html  README.md  app.py  config.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
data/: cursos.csv
docs/: index.md  paginas.md
paginas/: __init__.py  criar_cursos.py  home.py  index.html  listar_cursos.py
search/: search_index.json
